@@ -1,6 +1,6 @@
 #include "reporter.h"
 
-#include <bobcat/errno>
+#include <bobcat/exception>
 #include <bobcat/mstream>
 #include <bobcat/stat>
 #include <bobcat/datetime>
